# onnx_ros

onnx_ros/: CMakeLists.txt  package.xml
onnx_ros/include/onnx_ros/: detic_component.hpp  visibility_control.h
onnx_ros/src/: detic_component.cpp  detic_node.cpp
onnxruntime_vendor/: CMakeLists.txt  package.xml
onnxruntime_vendor/cmake/: onnxruntime_vendor-extras.cmake
